force-app/main/default/objects/inspire1__Timesheet__c/inspire1__Timesheet__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Used with Time Tracking feature.</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Timesheet #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>