force-app/main/default/objects/inspire1__Timesheet__c/fields/inspire1__Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>