force-app/main/default/objects/inspire1__Timesheet__c/fields/inspire1__End_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>