force-app/main/default/objects/inspire1__Timesheet__c/fields/inspire1__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>