force-app/main/default/objects/inspire1__Timesheet__c/fields/inspire1__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>