force-app/main/default/objects/inspire1__Timesheet__c/validationRules/inspire1__Prevent_Edit_When_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>inspire1__Prevent_Edit_When_Locked</fullName>
    <active>true</active>
    <description>Prevents editing of Timesheet when Submitted or Approved status.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
OR(
ISPICKVAL( PRIORVALUE(inspire1__Status__c), &quot;Submitted&quot;),
ISPICKVAL( PRIORVALUE(inspire1__Status__c), &quot;Approved&quot;)
),
NOT(ISCHANGED(inspire1__Status__c)),
NOT(ISCHANGED(inspire1__Total_Hours__c))
)</errorConditionFormula>
    <errorMessage>This Timesheet is locked and cannot be modified. You must recall the Timesheet in order to modify it.</errorMessage>
</ValidationRule>